--- a/views/administration/users_edit.hbs
+++ b/views/administration/users_edit.hbs
@@ -108,25 +108,28 @@
                             <label><input name="termsOfUseConsent" type="checkbox" value="true" disabled {{#if consent.userConsent.termsOfUseConsent}}checked{{/if}}/> Nutzung</label><br/>
                         </div>
                     {{/unless}}
-                </div>
-                    <div class="modal-footer">
-                        <div class="pull-left">
-                            {{#ifCond isAdmin '|| !' editTeacher}}
-                                <button class="btn btn-secondary btn-pw" {{#if @root.hidePwChangeButton}} disabled title="Der Nutzer muss zuerst die Einverständniserklärung digital abschließen"{{/if}}>Passwort ändern</button>
-                                <button class="btn btn-secondary btn-delete">Benutzer löschen</button>
-                            {{/ifCond}}
-                            <button class="btn btn-secondary btn-invitation-link-with-hash {{#if editTeacher}}teacher{{else}}student{{/if}}">
-                                Persönlichen Einladungslink generieren
+                    </div>
+                    <div class="row">
+                        <div class="modal-footer w-100">
+                            <div class="pull-left">
+                                {{#ifCond isAdmin '|| !' editTeacher}}
+                                    <button class="btn btn-secondary btn-pw" {{#if @root.hidePwChangeButton}} disabled title="Der Nutzer muss zuerst die Einverständniserklärung digital abschließen"{{/if}}>Passwort ändern</button>
+                                    <button class="btn btn-secondary btn-delete">Benutzer löschen</button>
+                                {{/ifCond}}
+                                <button class="btn btn-secondary btn-invitation-link-with-hash {{#if editTeacher}}teacher{{else}}student{{/if}}"
+                                {{#ifeq consentStatusIcon '<i class="fa fa-check consent-status"></i>'}}disabled title="Der Nutzer ist bereits registriert"{{/ifeq}}>
+                                    Persönlichen Einladungslink generieren
+                                </button>
+                            </div>
+
+                            <button class="btn btn-secondary btn-cancel">
+                                {{closeLabel}}
+                            </button>
+
+                            <button type="submit" class="btn btn-primary btn-submit">
+                                {{submitLabel}}
                             </button>
                         </div>
-
-                        <button class="btn btn-secondary btn-cancel">
-                            {{closeLabel}}
-                        </button>
-
-                        <button type="submit" class="btn btn-primary btn-submit">
-                            {{submitLabel}}
-                        </button>
                     </div>
                 </form>
 
