--- a/views/partner/partner.hbs
+++ b/views/partner/partner.hbs
@@ -20,7 +20,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12">
-                <p>Wir danken unseren Partnern, die im Rahmen der Pilotphase verschiedene Lerninhalte zur freien Verfügung stellen, damit die Schul-Cloud erfahrbar wird.</p>
+                <p>Wir danken unseren Partnern, die im Rahmen der Pilotphase verschiedene Lerninhalte zur freien Verfügung stellen, damit die {{theme.title}} erfahrbar wird.</p>
             </div>
         </div>  
         <div class="row">
@@ -63,7 +63,7 @@
         <div class="row">
             <div class="intro-box col-sm-12">
                 <p>
-                    Das Schul-Cloud Projekt wird von einem Fachbeirat unterstützt, der sich aus verschiedenen
+                    Das {{theme.title}} Projekt wird von einem Fachbeirat unterstützt, der sich aus verschiedenen
                     Vertreter/innen der Bildungspraxis, Wirtschaft und Politik zusammensetzt. Im Fokus stehen neben
                     technischen Aspekten, auch Themen wie Datenschutz und Pädagogik.
                 </p>
