reg mails readonly and fix mailing

--- a/views/registration/registration-parent.hbs
+++ b/views/registration/registration-parent.hbs
@@ -46,7 +46,7 @@
         <div class="form-group">
           <label>E-Mail-Adresse des Schülers: * <small>(Schüler benötigen eine eigene E-Mail-Adresse)</small></label>
             {{#if query.email}}
-                <input class="form-control linked" type="email" name="student-email" value="{{query.email}}" required/>
+                <input class="form-control linked" type="email" name="student-email" value="{{query.email}}" readonly required/>
             {{else}}
                 <input class="form-control linked" type="email" name="student-email" placeholder="schueler@schul-cloud.org" required />
             {{/if}}
