logout after reg

--- a/views/registration/registration-employee.hbs
+++ b/views/registration/registration-employee.hbs
@@ -123,7 +123,7 @@
         <h4>Vielen Dank für die Registrierung in der {{theme.short_title}}</h4>
         <p>Du kannst dich jetzt in der {{theme.title}} anmelden.</p>
 
-        <a class="btn btn-primary" href="/login">Login öffnen</a>
+        <a class="btn btn-primary" href="/logout">Login öffnen</a>
       </section>
       {{/content}}
     {{/embed}}
