--- a/views/registration/registration-parent.hbs
+++ b/views/registration/registration-parent.hbs
@@ -158,7 +158,7 @@
       {{/if}}
         <p>Ihr Kind kann sich nun einloggen:</p>
 
-        <a class="btn btn-primary" href="/login">Login öffnen</a>
+        <a class="btn btn-primary" href="/logout">Login öffnen</a>
       </section>
       {{/content}}
     {{/embed}}
