--- a/views/registration/registration-student.hbs
+++ b/views/registration/registration-student.hbs
@@ -120,7 +120,7 @@
             </div>
         {{/if}}
 
-        <a class="btn btn-primary" href="/login">Login öffnen</a>
+        <a class="btn btn-primary" href="/logout">Login öffnen</a>
       </section>
       {{/content}}
     {{/embed}}
