--- a/views/firstLogin/firstLogin14_17.hbs
+++ b/views/firstLogin/firstLogin14_17.hbs
@@ -40,7 +40,7 @@
         <div class="row">
           <div class="form-group col-md-6 col-sm-12">
               <label>E-Mail:</label>
-              <input class="form-control" type="email" name="student-email" placeholder="schueler@schul-cloud.org" title="Bitte gib eine gültige E-Mail-Adresse ein." value="{{currentUser.email}}" required></input>
+              <input class="form-control" type="email" name="student-email" placeholder="schueler@schul-cloud.org" title="Bitte gib eine gültige E-Mail-Adresse ein." value="{{currentUser.email}}" readonly required></input>
           </div>
         </div>
       </section>
