--- a/views/registration/registration.hbs
+++ b/views/registration/registration.hbs
@@ -38,7 +38,7 @@
         {{#if user.firstName}}<input type="hidden" name="firstName" value="{{user.firstName}}" />{{/if}}
         {{#if user.lastName}}<input type="hidden" name="lastName" value="{{user.lastName}}" />{{/if}}
         {{#if user.email}}<input type="hidden" name="email" value="{{user.email}}" />{{/if}}
-        {{#if user.birthday}}<input type="hidden" name="birthday" value="{{user.birthday}}" />{{/if}}
+        {{#if user.birthday}}<input type="hidden" name="birthdate" value="{{user.birthday}}" />{{/if}}
     </div>
   {{/content}}
 {{/extend}}
