--- a/views/registration/registration-parent.hbs
+++ b/views/registration/registration-parent.hbs
@@ -2,23 +2,15 @@
   {{#content "scripts" mode="append"}}
       <script src="/scripts/dataprivacy/dataprivacy.js" type="text/javascript" defer></script>
       <script src="/scripts/dataprivacy/registration.js" type="text/javascript" defer></script>
-      <script src="/scripts/jquery/jknownData.datetimepicker.full.min.js" type="text/javascript" defer></script>
+      <script src="/scripts/jquery/jquery.datetimepicker.full.min.js" type="text/javascript" defer></script>
   {{/content}}
   {{#content "styles" mode="append"}}
       <link rel="stylesheet" href="/styles/administration/dataprivacy.css"/>
-      <link rel="stylesheet" href="/styles/lib/datetimepicker/jknownData.datetimepicker.min.css"/>
+      <link rel="stylesheet" href="/styles/lib/datetimepicker/jquery.datetimepicker.min.css"/>
   {{/content}}
   {{#content "page"}}
     {{#embed "lib/forms/paginatedForm" sections=5 action="/registration/submit" method="post" class="registration-form parent"}}
       {{#content "panels"}}
-      <input type="hidden" name="classOrSchoolId" value="{{knownData.classOrSchoolId}}"/>
-
-      {{#if knownData.sso}}<input type="hidden" name="sso" value="{{knownData.sso}}"/>{{/if}}
-      {{#if knownData.account}}<input type="hidden" name="account" value="{{knownData.account}}"/>{{/if}}
-
-      {{#if knownData.importHash}}<input type="hidden" name="importHash" value="{{knownData.importHash}}"/>{{/if}}
-      {{#if knownData.userId}}<input type="hidden" name="userId" value="{{knownData.userId}}"/>{{/if}}
-
       <section data-panel="section-1">
         <h4>Daten Ihres Kindes</h4>
         <p>Die {{theme.short_title}} bewahrt Nutzerdaten sicher auf und gibt sie nicht an Dritte weiter. Die Verarbeitung der Daten erfolgt entsprechend der hohen gesetzlichen Datenschutz-Anforderungen.</p>
@@ -26,27 +18,38 @@
         <div class="row">
           <div class="form-group col-md-6 col-sm-12">
             <label>Vorname: *</label>
-            <input class="form-control linked" name="firstName" type="text" placeholder="Vorname des Kindes in offizieller Schreibweise, keine Spitznamen" 
-              value="{{knownData.firstName}}" required {{#if knownData.firstName}}readonly{{/if}} />
+              {{#if query.firstName}}
+                  <input class="form-control linked" name="student-firstname" type="text" value="{{query.firstName}}" readonly required/>
+              {{else}}
+                  <input class="form-control linked" name="student-firstname" type="text" placeholder="Vorname des Kindes in offizieller Schreibweise, keine Spitznamen" required/>
+              {{/if}}
           </div>
           <div class="form-group col-md-6 col-sm-12">
             <label>Nachname: *</label>
-            <input class="form-control linked" name="lastName" type="text"  placeholder="Nachname des Kindes" 
-              value="{{knownData.lastName}}" required {{#if knownData.lastName}}readonly{{/if}}/>
+              {{#if query.lastName}}
+                  <input class="form-control linked" name="student-secondname" type="text" value="{{query.lastName}}" readonly required/>
+              {{else}}
+                  <input class="form-control linked" name="student-secondname" type="text" placeholder="Nachname des Kindes" required/>
+              {{/if}}
           </div>
         </div>
 
         <div class="form-group">
           <label>Geburtsdatum des Schülers: *</label>
-          <input class="form-control linked" name="birthdate" type="text"
-            data-date data-min-date="{{datePickerTodayMinus 18 0 -1}}" data-max-date="{{datePickerTodayMinus 4 0 0}}" 
-            value="{{#if knownData.birthDate}}{{knownData.birthDate}}{{else}}{{datePickerTodayMinus 16 0 0 "DD.MM.YYYY"}}{{/if}}" autocomplete="off" required {{#if knownData.birthDate}}readonly{{/if}}/>
+		  {{#if birthdate}}
+		     <input class="form-control linked" name="birthdateInfo" type="text" value={{birthdate}} readonly required/>
+		  {{else}}
+			  <input class="form-control linked" data-date data-min-date="{{datePickerTodayMinus 18 0 -1}}" data-max-date="{{datePickerTodayMinus 4 0 0}}" value="{{datePickerTodayMinus 16 0 0 "DD.MM.YYYY"}}" name="student-birthdate" type="text" data-from="student-birthdate" autocomplete="off" required/>
+		  {{/if}}
         </div>
 
         <div class="form-group">
           <label>E-Mail-Adresse des Schülers: * <small>(Schüler benötigen eine eigene E-Mail-Adresse)</small></label>
-          <input class="form-control linked" name="email" type="email" placeholder="schueler@schul-cloud.org" 
-            value="{{knownData.email}}" required {{#if knownData.email}}readonly{{/if}} />
+            {{#if query.email}}
+                <input class="form-control linked" type="email" name="student-email" value="{{query.email}}" readonly required/>
+            {{else}}
+                <input class="form-control linked" type="email" name="student-email" placeholder="schueler@schul-cloud.org" required />
+            {{/if}}
         </div>
         <p class="explanation nomargin">
             Die E-Mail-Adresse ermöglicht den Versand von Benachrichtigungen und erleichtert das Zurücksetzen des Passwortes.
@@ -55,7 +58,7 @@
         <div class="row">
           <div class="form-group col-xl-3 col-lg-4 col-md-6 col-sm-12">
             <Label>Geschlecht: *</Label>
-            <select class="form-control form-control-lg" name="gender" type="text">
+            <select class="form-control form-control-lg" type="text" name="gender">
               <option value="noinfo" selected>keine Angabe</option>
               <option value="male">männlich</option>
               <option value="female">weiblich</option>
@@ -64,6 +67,13 @@
           </div>
         </div>
         <p class="explanation nomargin">Erhebung erfolgt für Forschung und Optimierung.</p>
+
+          {{#if classOrSchoolId}}<input type="hidden" name="classOrSchoolId" value="{{classOrSchoolId}}" />{{/if}}
+          {{#if sso}}<input type="hidden" name="sso" value="{{sso}}" />{{/if}}
+          {{#if account}}<input type="hidden" name="account" value="{{account}}" />{{/if}}
+          {{#if query.importHash}}<input type="hidden" name="importHash" value="{{query.importHash}}" />{{/if}}
+          {{#if query.userId}}<input type="hidden" name="userId" value="{{query.userId}}" />{{/if}}
+          {{#if query.birthday}}<input type="hidden" name="birthday" value="{{query.birthday}}" />{{/if}}
       </section>
 
 
@@ -75,17 +85,17 @@
         <div class="row">
           <div class="form-group col-md-6 col-sm-12">
             <label>Vorname: *</label>
-            <input class="form-control linked" name="parent_firstName" type="text" placeholder="Ihren Vornamen hier eingeben" required/>
+            <input class="form-control linked" name="parent-firstname" type="text" placeholder="Ihren Vornamen hier eingeben" required/>
           </div>
           <div class="form-group col-md-6 col-sm-12">
             <label>Nachname: *</label>
-            <input class="form-control linked" name="parent_lastName" type="text" placeholder="Ihren Nachname hier eingeben" required/>
+            <input class="form-control linked" name="parent-secondname" type="text" placeholder="Ihren Nachname hier eingeben" required/>
           </div>
         </div>
 
         <div class="form-group">
           <label>Ihre E-Mail-Adresse * <small>(Darf nicht gleich der E-Mail-Adresse Ihres Kindes sein)</small></label>
-          <input class="form-control" type="email" name="parent_email" required placeholder="eltern@schul-cloud.org" autocomplete />
+          <input class="form-control" type="email" name="parent-email" required placeholder="eltern@schul-cloud.org" autocomplete />
         </div>
         <p class="explanation nomargin">
           Wir benötigen eine E-Mail-Adresse, damit Ihre Einwilligung in die Nutzung der {{theme.short_title}} rechtlich gültig ist. Die {{theme.short_title}} gibt die Adresse nicht weiter. Sie erhalten keine unerwünschten Mails.
@@ -99,9 +109,9 @@
       <section data-panel="section-3">
         <h4>Einwilligungserklärung</h4>
         <p>Bitte bestätigen Sie folgende Einwilligungserklärungen, damit Ihr Kind die Vorteile der {{theme.short_title}} nutzen kann:</p>
-        <p>Ich, <b data-from="parent_firstName"></b> <b data-from="parent_lastName"></b>, bin erziehungsberechtigt für
-          <b data-from="firstName"></b>
-          <b data-from="lastName"></b> 
+        <p>Ich, <b data-from="parent-firstname"></b> <b data-from="parent-secondname"></b>, bin erziehungsberechtigt für
+          <b data-from="student-firstname"></b>
+          <b data-from="student-secondname"></b> 
         und erkläre Folgendes:</p>
           {{#embed "registration/forms/einwilligungserklaerung"}}{{/embed}}
       </section>
@@ -112,10 +122,10 @@
         <h4>Fast geschafft!</h4>
         <p>Wir haben soeben eine E-Mail an Ihre angegebene Adresse gesendet. Bitte geben Sie den darin enthaltenen Code hier ein, um die Registrierung abzuschließen. Sie haben keine E-Mail erhalten? <button type="button" class="btn-link" id="resend-pin">Code erneut senden</button></p>
         <div id="pinverification">
-            {{#embed "registration/pin" digits=4 pattern="[0-9]" required="true" name="pin" class="mail-validation my-1"}}{{/embed}}
+            <div id="temp-pin" class="hidden"></div>
+            {{#embed "registration/pin" digits=4 pattern="[0-9]" required="true" name="email-pin" class="mail-validation my-1"}}{{/embed}}
         </div>
-        <input type="hidden" name="password_1" class="student-password-input" />
-        <input type="hidden" name="password_2" class="student-password-input" />
+        <input type="hidden" name="initial-password" class="student-password-input" />
       </section>
 
 
@@ -128,13 +138,13 @@
         <div>
           <p>
             Mit folgenden Daten kann sich
-            <b data-from="firstName"></b>
-            <b data-from="secondName"></b>
+            <b data-from="student-firstname"></b>
+            <b data-from="student-secondname"></b>
             in der {{theme.short_title}} anmelden. Bitte geben Sie die Daten an Ihr Kind weiter. Zusätzlich haben Sie und Ihr Kind die Daten per E-Mail erhalten.
             <div class="print">
               <div class="recap">
                 <!--<p>Nutzername: <i data-from="student-firstname"></i>.<i data-from="student-secondname"></i></p>-->
-                <p>E-Mail: <i data-from="email"></i></p>
+                <p>E-Mail: <i data-from="student-email"></i></p>
                 <p>Passwort: <i class="student-password">********</i></p>
               </div>
               <div class="btn btn-secondary btn-print" data-toggle="tooltip" title="" data-original-title="Anmeldedaten drucken">
