--- a/views/registration/registration-parent.hbs
+++ b/views/registration/registration-parent.hbs
@@ -2,22 +2,22 @@
   {{#content "scripts" mode="append"}}
       <script src="/scripts/dataprivacy/dataprivacy.js" type="text/javascript" defer></script>
       <script src="/scripts/dataprivacy/registration.js" type="text/javascript" defer></script>
-      <script src="/scripts/jquery/jknownData.datetimepicker.full.min.js" type="text/javascript" defer></script>
+      <script src="/scripts/jquery/juser.datetimepicker.full.min.js" type="text/javascript" defer></script>
   {{/content}}
   {{#content "styles" mode="append"}}
       <link rel="stylesheet" href="/styles/administration/dataprivacy.css"/>
-      <link rel="stylesheet" href="/styles/lib/datetimepicker/jknownData.datetimepicker.min.css"/>
+      <link rel="stylesheet" href="/styles/lib/datetimepicker/juser.datetimepicker.min.css"/>
   {{/content}}
   {{#content "page"}}
     {{#embed "lib/forms/paginatedForm" sections=5 action="/registration/submit" method="post" class="registration-form parent"}}
       {{#content "panels"}}
-      <input type="hidden" name="classOrSchoolId" value="{{knownData.classOrSchoolId}}"/>
+      <input type="hidden" name="classOrSchoolId" value="{{user.classOrSchoolId}}"/>
 
-      {{#if knownData.sso}}<input type="hidden" name="sso" value="{{knownData.sso}}"/>{{/if}}
-      {{#if knownData.account}}<input type="hidden" name="account" value="{{knownData.account}}"/>{{/if}}
+      {{#if user.sso}}<input type="hidden" name="sso" value="{{user.sso}}"/>{{/if}}
+      {{#if user.account}}<input type="hidden" name="account" value="{{user.account}}"/>{{/if}}
 
-      {{#if knownData.importHash}}<input type="hidden" name="importHash" value="{{knownData.importHash}}"/>{{/if}}
-      {{#if knownData.userId}}<input type="hidden" name="userId" value="{{knownData.userId}}"/>{{/if}}
+      {{#if user.importHash}}<input type="hidden" name="importHash" value="{{user.importHash}}"/>{{/if}}
+      {{#if user.userId}}<input type="hidden" name="userId" value="{{user.userId}}"/>{{/if}}
 
       <section data-panel="section-1">
         <h4>Daten Ihres Kindes</h4>
@@ -27,12 +27,12 @@
           <div class="form-group col-md-6 col-sm-12">
             <label>Vorname: *</label>
             <input class="form-control linked" name="firstName" type="text" placeholder="Vorname des Kindes in offizieller Schreibweise, keine Spitznamen" 
-              value="{{knownData.firstName}}" required {{#if knownData.firstName}}readonly{{/if}} />
+              value="{{user.firstName}}" required {{#if user.firstName}}readonly{{/if}} />
           </div>
           <div class="form-group col-md-6 col-sm-12">
             <label>Nachname: *</label>
             <input class="form-control linked" name="lastName" type="text"  placeholder="Nachname des Kindes" 
-              value="{{knownData.lastName}}" required {{#if knownData.lastName}}readonly{{/if}}/>
+              value="{{user.lastName}}" required {{#if user.lastName}}readonly{{/if}}/>
           </div>
         </div>
 
@@ -40,13 +40,13 @@
           <label>Geburtsdatum des Schülers: *</label>
           <input class="form-control linked" name="birthdate" type="text"
             data-date data-min-date="{{datePickerTodayMinus 18 0 -1}}" data-max-date="{{datePickerTodayMinus 4 0 0}}" 
-            value="{{#if knownData.birthDate}}{{knownData.birthDate}}{{else}}{{datePickerTodayMinus 16 0 0 "DD.MM.YYYY"}}{{/if}}" autocomplete="off" required {{#if knownData.birthDate}}readonly{{/if}}/>
+            value="{{#if user.birthDate}}{{user.birthDate}}{{else}}{{datePickerTodayMinus 16 0 0 "DD.MM.YYYY"}}{{/if}}" autocomplete="off" required {{#if user.birthDate}}readonly{{/if}}/>
         </div>
 
         <div class="form-group">
           <label>E-Mail-Adresse des Schülers: * <small>(Schüler benötigen eine eigene E-Mail-Adresse)</small></label>
           <input class="form-control linked" name="email" type="email" placeholder="schueler@schul-cloud.org" 
-            value="{{knownData.email}}" required {{#if knownData.email}}readonly{{/if}} />
+            value="{{user.email}}" required {{#if user.email}}readonly{{/if}} />
         </div>
         <p class="explanation nomargin">
             Die E-Mail-Adresse ermöglicht den Versand von Benachrichtigungen und erleichtert das Zurücksetzen des Passwortes.
