um.. now required

--- a/views/lib/forms/form-helpdesk.hbs
+++ b/views/lib/forms/form-helpdesk.hbs
@@ -19,7 +19,7 @@
     </textarea>
 </div>
 <div id="benefitDiv" class="form-group">
-    <label class="control-label" for="message">um ...</label><span class="text-muted float-right"> (optional)</span>
+    <label class="control-label" for="message">um ...</label><span class="text-muted float-right"> required</span>
     <textarea class="form-control" id="benefit" cols="50" name="benefit" rows="6" placeholder="z.B. sie zu aktualisieren">
     </textarea>
 </div>
