--- a/views/lib/forms/form-helpdesk.hbs
+++ b/views/lib/forms/form-helpdesk.hbs
@@ -19,8 +19,8 @@
     </textarea>
 </div>
 <div id="benefitDiv" class="form-group">
-    <label class="control-label" for="message">um ...</label><span class="text-muted float-right"> required</span>
-    <textarea class="form-control" id="benefit" cols="50" name="benefit" rows="6" placeholder="z.B. sie zu aktualisieren">
+    <label class="control-label" for="message">um ...</label>
+    <textarea class="form-control" id="benefit" cols="50" name="benefit" rows="6" placeholder="z.B. sie zu aktualisieren" required>
     </textarea>
 </div>
 <div id="acceptanceCriteriaDiv" class="form-group">
