--- a/views/registration/registration-student.hbs
+++ b/views/registration/registration-student.hbs
@@ -12,6 +12,7 @@
     {{#embed "lib/forms/paginatedForm" sections=4 action="/registration/submit" method="post" class="registration-form student"}}
       {{#content "panels"}}
       <input type="hidden" name="classOrSchoolId" value="{{user.classOrSchoolId}}"/>
+      <input type="hidden" name="roles" value="student"/>
 
       {{#if user.sso}}<input type="hidden" name="sso" value="{{user.sso}}"/>{{/if}}
       {{#if user.account}}<input type="hidden" name="account" value="{{user.account}}"/>{{/if}}
