bugfix "nutzungsbedingungen = false"

--- a/views/registration/forms/einwilligungserklaerung.hbs
+++ b/views/registration/forms/einwilligungserklaerung.hbs
@@ -17,7 +17,7 @@
 <p class="explanation">Nutzernamen werden nicht an integrierte Drittanbieter weitergegeben. Sollte eine Wiedererkennung nötig sein, z.B. für individuelle Aufgabenstellungen, geschieht dies zum Schutz der Nutzeridentität auf Basis eines Pseudonyms. Die Nutzerdaten bleiben sicher im Kernbereich der {{theme.short_title}}.</p>
 
 <label>
-    <input name="termsOfUseConsent" type="checkbox" value="Nutzungsbedingungen" required/>
+    <input name="termsOfUseConsent" type="checkbox" value="true" required/>
     <span>Ich habe die <a href="https://schul-cloud-hpi.obs.eu-de.otc.t-systems.com:443/Dokumente/Einwilligung/4-Nutzungsbedingungen.pdf" target="_blank">Nutzungsbedingungen</a> gelesen und stimme ihnen zu.</span>
 </label>
 <p class="explanation">Die Nutzung der {{theme.short_title}} ist freiwillig. Die erteilte Einwilligung kann daher jederzeit ohne Nachteile für den Nutzer widerrufen werden. Eine kurze Mail mit Angabe des Vor- und Nachnamens, der Klasse und der Schule an folgende Adresse genügt: <a href="mailto:widerruf@schul-cloud.org?subject=Widerruf der Einwilligung&body=Liebes {{theme.short_title}}-Team,%0D%0Ahiermit widerrufe ich die von mir erteilte EInwilligung zur Verarbeitung meiner personenbezogenen Daten.%0D%0A%0D%0AVor- und Nachname:%0D%0AKlasse:%0D%0ASchule:%0D%0A">widerruf@schul-cloud.org</a></p>
