category emptystring, schoolcloudtitle now via var, more stuff required

--- a/views/lib/forms/form-helpdesk.hbs
+++ b/views/lib/forms/form-helpdesk.hbs
@@ -31,7 +31,7 @@
 
 <div id="problemSummaryDiv" class="form-group hidden">
     <label class="control-label" for="title">Kurzbeschreibung des Problems</label>
-    <input type="text" name="title" id="title" placeholder="Kurzbeschreibung des Problems" class="form-control">
+    <input type="text" name="title" id="problemTitle" placeholder="Kurzbeschreibung des Problems" class="form-control">
 </div>
 <div id="hasHappenedDiv" class="form-group hidden">
     <label class="control-label" for="hasHappened">IST-Zustand: Was geschieht zur Zeit, nachdem ich welche Schritte durchgeführt habe?</label>
