--- a/views/lib/forms/form-problems.hbs
+++ b/views/lib/forms/form-problems.hbs
@@ -7,12 +7,12 @@
 </div>
 <div class="form-group">
     <label class="control-label" for="hasHappened">IST-Zustand: Was geschieht zur Zeit, nachdem ich welche Schritte durchgeführt habe?</label>
-    <textarea class="form-control" id="hasHappened" cols="50" name="hasHappened" rows="6">
+    <textarea class="form-control" id="hasHappened" cols="50" name="hasHappened" rows="6" required>
     </textarea>
 </div>
 <div class="form-group">
     <label class="control-label" for="supposedToHappen">SOLL-Zustand: Was sollte stattdessen geschehen?</label>
-    <textarea class="form-control" id="supposedToHappen" cols="50" name="supposedToHappen" rows="6">
+    <textarea class="form-control" id="supposedToHappen" cols="50" name="supposedToHappen" rows="6" required>
     </textarea>
 </div>
 <div class="form-group">
