links open in a new tab

--- a/views/authentication/home.hbs
+++ b/views/authentication/home.hbs
@@ -151,7 +151,7 @@
                             <div class="form-group">
                                 Alle Neuigkeiten rund um die HPI Schul-Cloud bequem in Ihrem Postfach: 
                             </div>
-                            <a href="https://hpi.de/open-campus/registrierung/hpi-schul-cloud-newsletter/" class="btn btn-block btn-primary">Newsletter abonnieren</a>
+                            <a href="https://hpi.de/open-campus/registrierung/hpi-schul-cloud-newsletter/" target="_blank" class="btn btn-block btn-primary">Newsletter abonnieren</a>
                         </div>
                     </section>
                     
