--- a/views/registration/registration-student.hbs
+++ b/views/registration/registration-student.hbs
@@ -41,8 +41,8 @@
             <label>Geburtsdatum: *</label>
             <input class="form-control linked" name="birthDate" type="text" 
                 data-date data-min-date="{{datePickerTodayMinus 100 0 0}}" data-max-date="{{datePickerTodayMinus 18 0 0}}" 
-                value="{{#if user.birthDate}}{{user.birthDate}}{{else}}{{datePickerTodayMinus 19 0 0 "DD.MM.YYYY"}}{{/if}}" 
-                required {{#if user.birthDate}}readonly{{/if}} autocomplete="off" />
+                value="{{#if user.birthday}}{{dateToPicker user.birthday}}{{else}}{{datePickerTodayMinus 19 0 0 "DD.MM.YYYY"}}{{/if}}"
+                required {{#if user.birthday}}readonly{{/if}} autocomplete="off" />
 
         </div>
 
