Added Fitler & Livesearch

--- a/views/content/forms/form-search.hbs
+++ b/views/content/forms/form-search.hbs
@@ -1,5 +1,5 @@
 <form method="get">
-    <div class="search-wrapper">
+    <div class="search-wrapper mb-1">
         <div class="input-group input-group-lg">
             <input value="{{ query }}"
                    name="q"
