--- a/views/registration/registration-employee.hbs
+++ b/views/registration/registration-employee.hbs
@@ -12,21 +12,21 @@
   {{#content "page"}}
     {{#embed "lib/forms/paginatedForm" sections=5 action="/registration/submit" method="post" class="registration-form parent"}}
       {{#content "panels"}}
+      <input type="hidden" name="classOrSchoolId" value="{{user.classOrSchoolId}}"/>
+      <input type="hidden" name="roles" value="employee"/>
+
+      {{#if user.sso}}<input type="hidden" name="sso" value="{{user.sso}}"/>{{/if}}
+      {{#if user.account}}<input type="hidden" name="account" value="{{user.account}}"/>{{/if}}
+
+      {{#if user.importHash}}<input type="hidden" name="importHash" value="{{user.importHash}}"/>{{/if}}
+      {{#if user.userId}}<input type="hidden" name="userId" value="{{user.userId}}"/>{{/if}}
+
       <section data-panel="section-1" class="noback">
         <h4>Willkommen zur Anmeldung in der {{theme.title}}</h4>
         <p>Wir freuen uns, dass du die {{theme.title}} nutzen möchtest und mithilfst, gemeinsam den nächsten Schritt zur digitalen Unterstützung des Unterrichts zu gehen – Open Source, nicht profitorientiert und datenschutzkonform.</p>
         <p>Bitte registriere dich zunächst in der {{theme.title}} und stimme den Nutzungsbedingungen zu, damit du die Vorteile der digitalen Lernumgebung nutzen kannst.</p>
 
         <p class="mt-2 explanation nomargin">* Sprachlicher Hinweis: Für bessere Lesbarkeit verwenden wir in der {{theme.short_title}} die männliche Form (z.B. „Schüler“, „Lehrer“). Es sind stets alle Personen unabhängig vom Geschlecht gemeint. Die {{theme.short_title}} ist für alle Menschen da, unabhängig von Herkunft, Einschränkungen, Geschlecht und sexueller Orientierung. 🌈🎉🦄 </p>
-          {{#if classOrSchoolId}}<input type="hidden" name="classOrSchoolId" value="{{classOrSchoolId}}" />{{/if}}
-          {{#if sso}}<input type="hidden" name="sso" value="{{sso}}" />{{/if}}
-          {{#if account}}<input type="hidden" name="account" value="{{account}}" />{{/if}}
-          {{#if user.importHash}}<input type="hidden" name="importHash" value="{{user.importHash}}" />{{/if}}
-          {{#if user.userId}}<input type="hidden" name="userId" value="{{user.userId}}" />{{/if}}
-          {{#if user.firstName}}<input type="hidden" name="firstName" value="{{user.firstName}}" />{{/if}}
-          {{#if user.lastName}}<input type="hidden" name="lastName" value="{{user.lastName}}" />{{/if}}
-          {{#if user.email}}<input type="hidden" name="email" value="{{user.email}}" />{{/if}}
-          {{#if user.birthday}}<input type="hidden" name="birthday" value="{{user.birthday}}" />{{/if}}
       </section>
 
 
@@ -39,62 +39,53 @@
         <div class="row">
           <div class="form-group col-md-6 col-sm-12">
             <label>Vorname: *</label>
-              {{#if user.firstName}}
-                  <input class="form-control linked" name="firstName" type="text" value="{{user.firstName}}" readonly required/>
-              {{else}}
-                  <input class="form-control linked" name="firstName" type="text" placeholder="Ihren Vornamen hier eingeben" required/>
-              {{/if}}
+            <input class="form-control linked" name="firstName" type="text" placeholder="Ihren Vornamen hier eingeben"
+              value="{{user.firstName}}" required {{#if user.firstName}}readonly{{/if}}/>
           </div>
           <div class="form-group col-md-6 col-sm-12">
             <label>Nachname: *</label>
-              {{#if user.lastName}}
-                  <input class="form-control linked" name="lastName" type="text" value="{{user.lastName}}" readonly required/>
-              {{else}}
-                  <input class="form-control linked" name="lastName" type="text" placeholder="Ihren Nachname hier eingeben" required/>
-              {{/if}}
+            <input class="form-control linked" name="lastName" type="text" placeholder="Ihren Nachname hier eingeben" 
+              value="{{user.lastName}}" required {{#if user.lastName}}readonly{{/if}}/>
           </div>
         </div>
 
         <div class="form-group">
           <label>Ihre E-Mail-Adresse *</label>
-            {{#if user.email}}
-                <input class="form-control linked" type="email" name="email" value="{{user.email}}" readonly required/>
-            {{else}}
-                <input class="form-control linked" type="email" name="email" required placeholder="lehrer@schul-cloud.org" autocomplete />
-            {{/if}}
+          <input class="form-control linked" type="email" name="email" placeholder="lehrer@schul-cloud.org" 
+            value="{{user.email}}" required {{#if user.email}}readonly{{else}}autocomplete{{/if}} />
         </div>
 
-          <p style="margin-top:1rem;">Mindestens 8 Zeichen mit Groß- und Kleinschreibung und mindestens einer Zahl und Sonderzeichen.
-              <br/>
-              Erlaubte Sonderzeichen sind: <code>!§$%&/()=?\;:,.#+*~</code></p>
-          <div class="row">
-              <div class="form-group col-md-6 col-sm-12" style="margin-top:0;">
-                  <label>Passwort: *</label>
-                  <input
-                          class="form-control linked"
-                          id="password"
-                          name="password-1"
-                          type="password"
-                          placeholder="Passwort"
-                          minlength="8"
-                          pattern="^(?=.*[A-Z])(?=.*[0-9])(?=.*[a-z])(?=.*[\-_!<>§$%&\/()=?\\;:,.#+*~']).{8,255}$"
-                          title="Mindestens 8 Zeichen mit Groß- und Kleinschreibung und mindestens einer Zahl und Sonderzeichen."
-                          required/>
-              </div>
-              <div class="form-group col-md-6 col-sm-12" style="margin-top:0;">
-                  <label>Passwort wiederholen: *</label>
-                  <input
-                          class="form-control"
-                          id="password-control"
-                          name="password-2"
-                          type="password"
-                          placeholder="Passwort wiederholen"
-                          minlength="8"
-                          pattern="^(?=.*[A-Z])(?=.*[0-9])(?=.*[a-z])(?=.*[\-_!<>§$%&\/()=?\\;:,.#+*~']).{8,255}$"
-                          title="Mindestens 8 Zeichen mit Groß- und Kleinschreibung und mindestens einer Zahl und Sonderzeichen."
-                          required/>
-              </div>
+        <p style="margin-top:1rem;">Mindestens 8 Zeichen mit Groß- und Kleinschreibung und mindestens einer Zahl und Sonderzeichen.
+            <br/>
+            Erlaubte Sonderzeichen sind: <code>!§$%&/()=?\;:,.#+*~</code></p>
+        <div class="row">
+          <div class="form-group col-md-6 col-sm-12" style="margin-top:0;">
+            <label>Passwort: *</label>
+            <input
+              class="form-control linked"
+              id="password"
+              name="password_1"
+              type="password"
+              placeholder="Passwort"
+              minlength="8"
+              pattern="^(?=.*[A-Z])(?=.*[0-9])(?=.*[a-z])(?=.*[\-_!<>§$%&\/()=?\\;:,.#+*~']).{8,255}$"
+              title="Mindestens 8 Zeichen mit Groß- und Kleinschreibung und mindestens einer Zahl und Sonderzeichen."
+              required/>
           </div>
+          <div class="form-group col-md-6 col-sm-12" style="margin-top:0;">
+            <label>Passwort wiederholen: *</label>
+            <input
+                    class="form-control"
+                    id="password-control"
+                    name="password_2"
+                    type="password"
+                    placeholder="Passwort wiederholen"
+                    minlength="8"
+                    pattern="^(?=.*[A-Z])(?=.*[0-9])(?=.*[a-z])(?=.*[\-_!<>§$%&\/()=?\\;:,.#+*~']).{8,255}$"
+                    title="Mindestens 8 Zeichen mit Groß- und Kleinschreibung und mindestens einer Zahl und Sonderzeichen."
+                    required/>
+          </div>
+        </div>
       </section>
 
 
@@ -112,8 +103,7 @@
         <h4>Fast geschafft!</h4>
         <p>Wir haben soeben eine E-Mail an Ihre angegebene Adresse gesendet. Bitte geben Sie den darin enthaltenen Code hier ein, um die Registrierung abzuschließen. Sie haben keine E-Mail erhalten? <button type="button" class="btn-link" id="resend-pin">Code erneut senden</button></p>
         <div id="pinverification">
-            <div id="temp-pin" class="hidden"></div>
-            {{#embed "registration/pin" digits=4 pattern="[0-9]" required="true" name="email-pin" class="mail-validation my-1"}}{{/embed}}
+            {{#embed "registration/pin" digits=4 pattern="[0-9]" required="true" name="pin" class="mail-validation my-1"}}{{/embed}}
         </div>
       </section>
 
