quick-fix-fullscreen

--- a/static/styles/lib/loggedin.scss
+++ b/static/styles/lib/loggedin.scss
@@ -371,6 +371,7 @@ body.fullscreen{
     }
     .content-wrapper{
         width: 100vw;
+        margin-left: 0;
         .content-min-height{
             min-height: 100vh;
         }
