--- a/views/authentication/home.hbs
+++ b/views/authentication/home.hbs
@@ -144,6 +144,16 @@
                             <a href="https://blog.schul-cloud.org" target="scblog" class="card-link pull-right pt-1">weitere Artikel <i class="fa  fa-angle-double-right" aria-hidden="true"></i></a>
                         </div>
                     </section>
+
+                    <section id="newsletter" class="card">
+                        <div class="card-block">
+                            <h4 class="card-title">Newsletter</h4>
+                            <div class="form-group">
+                                Alle Neuigkeiten rund um die HPI Schul-Cloud bequem in Ihrem Postfach: 
+                            </div>
+                            <a href="https://hpi.de/open-campus/registrierung/hpi-schul-cloud-newsletter/" target="_blank" class="btn btn-block btn-primary">Newsletter abonnieren</a>
+                        </div>
+                    </section>
                     
                     <section id="partner" class="card">
                         <div class="card-block">
