--- a/views/lib/error.hbs
+++ b/views/lib/error.hbs
@@ -3,26 +3,37 @@
         {{#content "styles" mode="append"}}
             <link rel="stylesheet" href="/styles/lib/error.css"/>
         {{/content}}
-
         {{#content "page"}}
-            <div class="error-page">
-                <section class="details">
-                    <div class="error-code">
-                        <h3 class="title">{{error.status}}</h3>
-                        <h4 class="message">{{message}}</h4>
+            <div class="error-header-wrapper mb-3">
+                <img class="error-header-image" src="/images/broken-pen.svg" alt="zerbrocheneer Stift"/>
+                <h2 class="error-header-code">{{error.statusCode}}</h2>
+                <p class="error-header-text">
+                    {{#if error.statusCode}}
+                        {{castStatusCodeToString error.statusCode}}
+                    {{else}}
+                        Da ist wohl etwas schief gelaufen!
+                    {{/if}}
+                </p>
+
+                <button class="btn btn-primary" onclick="window.history.back();"><i class="fa fa-arrow-left"></i> zurück</button>
+            </div>
+
+            <div class="error-details-wrapper">
+                <button id="error-toggle-details" class="btn btn-secondary mb-1" data-toggle="collapse" data-target="#error-details" aria-expanded="false" aria-controls="error-details">
+                    <span class="show">Details anzeigen</span>
+                    <span class="hide">Details verstecken</span>
+                </button>
+                <div id="error-details" class="collapse card error-card">
+                    <div class="card-header">
+                        Fehler-Details: <br/>
+                        <code>{{message}}</code>
                     </div>
                     {{#if error.stack}}
-                        <div class="card error-card">
-                            <div class="card-header">
-                                Fehler-Details
-                            </div>
-                            <div class="card-block error-description">
-                                {{error.stack}}
-                            </div>
+                        <div class="card-block error-description">
+                            <pre>{{error.stack}}</pre>
                         </div>
                     {{/if}}
-                    <button class="btn btn-secondary" onclick="window.history.back();"><i class="fa fa-arrow-left"></i> zurück</button>
-                </section>
+                </div>
             </div>
         {{/content}}
     {{/extend}}
